# yat-trailer-loading

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
demo/: demo_trailer_load.py
tests/: test_params.py  trailer_loading.py  trailer_loading_wrapper.py
ytl/: __init__.py  bin_packing.py  constants.py  defaults.py  exceptions.py  optimizer_functions.py  options.py  standard_logistic_dims.py  unit_converters.py  utils.py  validation.py
ytl/generator/: __init__.py  pieces.py  trailer.py
ytl/logistics_objects/: __init__.py  common.py  piece.py  shipment.py  trailer.py
ytl/optimizer_functions/: __init__.py
ytl/optimizer_functions/piece_arrangement/: bin_packing.py  greedy.py  naive.py
ytl/optimizer_functions/shipment_arrangement/: bin_packing.py  greedy.py  naive.py  simple_movements.py
ytl/py3dbp/: __init__.py  auxiliary_methods.py  constants.py  main.py
ytl/services/: __init__.py  trailer_load.py  trailer_load_api.py
