[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ytl"
version = "1.0.1"
authors = [
  { name="Robert Goss", email="rgoss@yat.ai" },
  { name="Jarod Hart", email="jhart@yat.ai" },
]
description = "A fast trailer load optimization service provided by YAT, LLC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yat-co/yat-trailer-loading"
"Bug Tracker" = "https://github.com/yat-co/yat-trailer-loading/issues"